<resources>
    <string name="app_name">Voom</string>
    <string name="voom_logo">Voom logo</string>
    <string name="nav_home">Home</string>
    <string name="nav_services">Services</string>
    <string name="nav_tracking">Activity</string>'
    <string name="nav_scheduled">Scheduled</string>
    <string name="nav_activity">History</string>
    <string name="nav_profile">Profile</string>
    <string name="create_new_account">Create new account</string>
    <string name="have_an_account">Already have an account?</string>
    <string name="have_no_account">Don\'t have an account yet?</string>
    <string name="reset_password">Reset password</string>
    <string name="forgot_password">Forgot password</string>
    <string name="submit">Submit</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="birth_date">Birth date</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="phone_number">Phone number</string>
    <string name="address">Address</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="signup">sign up</string>
    <string name="signin">sign in</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="profile_picture">Profile picture</string>>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_lastname">Name Lastname</string>
    <string name="change_password">Change Password</string>
    <string name="save_changes">Save Changes</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="confirm">Confirm</string>
    <string name="contact">Contact</string>
    <string name="general">General</string>
    <string name="baby_transport_allowed">Baby transport allowed</string>
    <string name="pet_transport_allowed">Pet transport allowed\n</string>
    <string name="number_of_seats">Number of seats</string>
    <string name="license_plates">Licence plates</string>
    <string name="vehicle_type">Vehicle type</string>
    <string name="vehicle_model">Vehicle model</string>
    <string name="vehicle_info">Vehicle info</string>
    <string name="driver_profile">Driver profile\n</string>
    <string name="driver_profile_page">Driver profile page</string>
    <string name="distance_placeholder">Distance: 5.2km</string>
    <string name="activity">Activity</string>
    <string name="clear_filters">Clear Filters</string>
    <string name="apply_filter">APPLY FILTER</string>
    <string name="sort">Sort</string>
    <string name="select_dates">Select date range for filtering</string>
    <string name="status_active">Active</string>
    <string name="status_inactive">Inactive</string>
    <string name="today">Today</string>
    <string name="date_today">Tuesday, September 1, 2025</string>
    <string name="rides_today">Rides today: 10</string>
    <string name="money_earned">Money earned: $115.23</string>
    <string name="upload_image">Upload profile image</string>
    <string name="profile_image_preview">Profile image preview</string>
    <string name="change_vehicle_information">Change vehicle information\n</string>
    <string name="activate_account">Activate account</string>
    <string name="nav_statistics">Statistics</string>
    <string name="stop">stop ride</string>
    <string name="panic">panic</string>
    <string name="cancel_ride">Cancel Ride</string>
    <string name="cancellation_reason">Cancellation reason</string>
    <string name="accept_ride">Accept Ride</string>
    <string name="you_have_arrived_at_the_pickup_location">You have arrived at the pickup location.</string>
    <string name="arrived_at_pickup">Arrived at Pickup</string>
    <string name="create_password">Create Password\n</string>
    <string name="date_to">Date to</string>
    <string name="date_from">Date from</string>
    <string name="ride">Ride</string>
    <string name="sortBy">Sort by</string>
    <string name="sort_by">Sort by</string>
</resources>