<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/nav_home"/>

    <item
        android:id="@+id/nav_scheduled"
        android:icon="@drawable/schedule_clock"
        android:title="@string/nav_scheduled"/>

    <item
        android:id="@+id/nav_statistics"
        android:icon="@drawable/outline_bar_chart_24"
        android:title="@string/nav_statistics"/>

    <item
        android:id="@+id/nav_activity"
        android:icon="@drawable/round_assignment_24"
        android:title="@string/nav_activity"/>

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/round_manage_accounts_24"
        android:title="@string/nav_profile"/>
</menu>