<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_registration_contact"
    tools:context=".unauthenticated.registration.RegistrationContactFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingHorizontal="16dp">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="200dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:contentDescription="@string/voom_logo"
                android:scaleType="fitCenter"
                android:src="@drawable/logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_new_account"
                android:textColor="@color/primary" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8pt"
                android:hint="@string/phone_number"
                android:textColorHint="@color/primary"
                app:boxBackgroundColor="@color/white"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="32dp"
                app:boxCornerRadiusBottomStart="32dp"
                app:boxCornerRadiusTopEnd="32dp"
                app:boxCornerRadiusTopStart="32dp"
                app:boxStrokeColor="@color/primary"
                app:boxStrokeErrorColor="@color/error"
                app:boxStrokeWidth="2dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phone_number_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8pt"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8pt"
                android:hint="@string/address"
                android:textColorHint="@color/primary"
                app:boxBackgroundColor="@color/white"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="32dp"
                app:boxCornerRadiusBottomStart="32dp"
                app:boxCornerRadiusTopEnd="32dp"
                app:boxCornerRadiusTopStart="32dp"
                app:boxStrokeColor="@color/primary"
                app:boxStrokeErrorColor="@color/error"
                app:boxStrokeWidth="2dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/address_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8pt"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:visibility="gone"
                android:id="@+id/image_preview"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:paddingVertical="16dp"
                android:contentDescription="@string/profile_image_preview" />
            
            <com.google.android.material.button.MaterialButton
                android:id="@+id/upload_profile_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/upload_image"
                app:cornerRadius="20dp"
                app:strokeWidth="1dp"
                app:strokeColor="@color/primary"
                android:textColor="@color/primary"
                app:backgroundTint="@android:color/transparent" />

            <LinearLayout
                android:orientation="horizontal"
                android:gravity="center"
                android:paddingVertical="16dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/fragment_registration_contact_previous"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="16dp"
                    android:text="@string/previous"
                    android:textColor="@android:color/white"
                    app:backgroundTint="@color/secondary"
                    app:cornerRadius="32dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/fragment_registration_contact_signup"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="16dp"
                    android:layout_marginLeft="16dp"
                    android:text="@string/signup"
                    android:textColor="@android:color/white"
                    app:backgroundTint="@color/secondary"
                    app:cornerRadius="32dp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</FrameLayout>