<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".unauthenticated.registration.AccountActivationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingVertical="64dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingHorizontal="16dp">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="200dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:contentDescription="@string/voom_logo"
                android:scaleType="fitCenter"
                android:src="@drawable/logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activate_account"
                android:textColor="@color/primary" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/activate_account"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_marginVertical="16dp"
                android:text="@string/submit"
                android:textColor="@android:color/white"
                app:backgroundTint="@color/secondary"
                app:cornerRadius="32dp" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>